# rag-poc-one-afternoon

./: .gitignore  CLAUDE.md  README.md  chat.py  chroma_client.py  dist.env  ingest.py  main.py  prompt.txt  pyproject.toml
scripts/: sync_articles.py
tests/: test_chat.py  test_chunking.py  test_ingest.py
tests/fixtures/: full_frontmatter.md  no_frontmatter.md  simple.md  test_document.md  with_sections.md
